--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "include-all": "^1.0.0",
     "jsonwebtoken": "^8.2.0",
     "moment": "^2.21.0",
+    "nodemailer": "^4.6.4",
     "nodemon": "^1.17.2",
     "rc": "1.0.1",
     "sails": "~0.12.14",
